pkg/agentgateway/translator/testdata/backends/backendtlspolicy.yaml
# For BackendTLSPolicy, we need a mapping from Backend --> Gateway, via a Route, so we need this boilerplate
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route
  namespace: default
spec:
  parentRefs:
    - name: test-gateway
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: test-tls
  namespace: default
spec:
  targetRefs:
    - name: infra-backend-v1
      kind: Service
      group: ""
  validation:
    hostname: example.com
    wellKnownCACertificates: System
---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    bind:
      key: 80/default/test-gateway
      port: 80
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    listener:
      bindKey: 80/default/test-gateway
      key: default/test-gateway.http
      name:
        gatewayName: test-gateway
        gatewayNamespace: default
        listenerName: http
      protocol: HTTP
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          port: 80
          service:
            hostname: infra-backend-v1.default.svc.cluster.local
            namespace: default
        weight: 1
      key: default/test-route.0.0.http
      listenerKey: default/test-gateway.http
      name:
        kind: HTTPRoute
        name: test-route
        namespace: default
- resource:
    policy:
      backend:
        backendTls:
          hostname: example.com
      key: default/test-tls:backend-tls:default/infra-backend-v1.default.svc.cluster.local
      name:
        kind: BackendTLSPolicy
        name: test-tls
        namespace: default
      target:
        service:
          hostname: infra-backend-v1.default.svc.cluster.local
          namespace: default
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: BackendTLSPolicy
  metadata:
    name: test-tls
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test-gateway
      conditions:
      - lastTransitionTime: fake
        message: Configuration is valid
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: Configuration is valid
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: agentgateway.dev/agentgateway
