pkg/agentgateway/translator/testdata/backends/tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-svc
  namespace: default
  labels:
    app: mcp-app
  annotations:
    kgateway.dev/mcp-path: /test
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      appProtocol: kgateway.dev/mcp
      port: 80
      targetPort: test
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  namespace: default
  name: mcp-backend
spec:
  mcp:
    targets:
      - name: mcp-static
        static:
          host: mcp-app.foo
          port: 8000
          protocol: StreamableHTTP
      - name: mcp-selector
        selector:
          services:
            matchLabels:
              app: mcp-app
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  namespace: default
  name: mcp-tls-system-cert
spec:
  targetRefs:
    - name: mcp-backend
      kind: AgentgatewayBackend
      group: agentgateway.dev
      sectionName: mcp-static
    - name: mcp-svc
      kind: Service
      group: ""
      sectionName: "80"
  validation:
    hostname: mcp-app.foo
    wellKnownCACertificates: System
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  namespace: default
  name: mcp-tls-ca-cert
spec:
  targetRefs:
    - name: mcp-svc
      group: ""
      kind: Service
  validation:
    caCertificateRefs:
      - name: ca-cert-1
        group: ""
        kind: ConfigMap
      - name: ca-cert-2
        group: ""
        kind: ConfigMap
    hostname: mcp-svc.foo
---
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: default
  name: ca-cert-1
data:
  ca.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIC1jCCAb4CCQCJczLyBBZ1GTANBgkqhkiG9w0BAQsFADAtMRUwEwYDVQQKDAxl
[...]
    SxODgqhtaPnOxQ==
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: default
  name: ca-cert-2
data:
  ca.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIDFTCCAf2gAwIBAgIUG9Mdv3nOQ2i7v68OgjArU4lhBikwDQYJKoZIhvcNAQEL
[...]
    SWP+58ApfCcURLpMxUmxkO1ayfecNJbmSQ==
    -----END CERTIFICATE-----
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  namespace: default
  name: ai-groups
spec:
  ai:
    groups:
      - providers:
          - name: openai
            openai:
              model: "gpt-4o"
            policies:
              auth:
                secretRef:
                  name: openai-primary-secret
          - name: anthropic
            anthropic:
              model: "claude-3-opus-20240229"
            policies:
              auth:
                key: "sk-anthropic-primary"
---
apiVersion: v1
kind: Secret
metadata:
  name: openai-primary-secret
  namespace: default
type: Opaque
data:
  Authorization: QmVhcmVyIHNrLW9wZW5haS1wcmltYXJ5LWtleQ== # Bearer sk-openai-primary-key
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  namespace: default
  name: openai-single
spec:
  ai:
    provider:
      openai:
        model: "gpt-4o"
  policies:
    auth:
      secretRef:
        name: openai-primary-secret
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: anthropic-single
  namespace: default
spec:
  ai:
    provider:
      anthropic:
        model: "claude-3-opus-20240229"
  policies:
    auth:
      key: "sk-anthropic-primary"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: ai-tls
  namespace: default
spec:
  targetRefs:
    - name: ai-groups
      kind: AgentgatewayBackend
      group: agentgateway.dev
      sectionName: anthropic
    - name: openai-single
      kind: AgentgatewayBackend
      group: agentgateway.dev
  validation:
    hostname: foo
    wellKnownCACertificates: System
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: ai-tls-all-groups
  namespace: default
spec:
  targetRefs:
    - name: ai-groups
      kind: AgentgatewayBackend
      group: agentgateway.dev
  validation:
    hostname: baz
    wellKnownCACertificates: System

---
# Output
output:
- resource:
    backend:
      ai:
        providerGroups:
        - providers:
          - inlinePolicies:
            - auth:
                key:
                  secret: sk-openai-primary-key
            name: openai
            openai:
              model: gpt-4o
          - anthropic:
              model: claude-3-opus-20240229
            inlinePolicies:
            - auth:
                key:
                  secret: sk-anthropic-primary
            name: anthropic
      key: default/ai-groups
      name:
        name: ai-groups
        namespace: default
- resource:
    backend:
      ai:
        providerGroups:
        - providers:
          - anthropic:
              model: claude-3-opus-20240229
            name: backend
      inlinePolicies:
      - auth:
          key:
            secret: sk-anthropic-primary
      key: default/anthropic-single
      name:
        name: anthropic-single
        namespace: default
- resource:
    backend:
      key: default/mcp-backend
      mcp:
        targets:
        - backend:
            backend: default/mcp-backend/mcp-static
          name: mcp-static
          protocol: STREAMABLE_HTTP
        - backend:
            port: 80
            service:
              hostname: mcp-svc.default.svc.cluster.local
              namespace: default
          name: mcp-svc-80
          path: /test
          protocol: STREAMABLE_HTTP
      name:
        name: mcp-backend
        namespace: default
- resource:
    backend:
      key: default/mcp-backend/mcp-static
      name:
        name: mcp-backend
        namespace: default
      static:
        host: mcp-app.foo
        port: 8000
- resource:
    backend:
      ai:
        providerGroups:
        - providers:
          - name: backend
            openai:
              model: gpt-4o
      inlinePolicies:
      - auth:
          key:
            secret: sk-openai-primary-key
      key: default/openai-single
      name:
        name: openai-single
        namespace: default
- resource:
    policy:
      backend:
        backendTls:
          hostname: baz
      key: default/ai-tls-all-groups:backend-tls:default/ai-groups
      name:
        kind: BackendTLSPolicy
        name: ai-tls-all-groups
        namespace: default
      target:
        backend:
          name: ai-groups
          namespace: default
- resource:
    policy:
      backend:
        backendTls:
          hostname: foo
      key: default/ai-tls:backend-tls:default/openai-single
      name:
        kind: BackendTLSPolicy
        name: ai-tls
        namespace: default
      target:
        backend:
          name: openai-single
          namespace: default
- resource:
    policy:
      backend:
        backendTls:
          hostname: mcp-svc.foo
          root: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxakNDQWI0Q0NRQ0pjekx5QkJaMUdUQU5CZ2txaGtpRzl3MEJBUXNGQURBdE1SVXdFd1lEVlFRS0RBeGwKZUdGdGNHeGxJRWx1WXk0eEZEQVNCZ05WQkFNTUMyVjRZVzF3YkdVdVkyOXRNQjRYRFRJMU1ETXdOekUwTWpreApObG9YRFRJMk1ETXdOekUwTWpreE5sb3dMVEVWTUJNR0ExVUVDZ3dNWlhoaGJYQnNaU0JKYm1NdU1SUXdFZ1lEClZRUUREQXRsZUdGdGNHeGxMbU52YlRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU4wVTZUVllFQ2t3cW54aDFLdDNkUytMaWFsclhCT1hLYWdqOXRFNTgyVDZkd21xVGhENzVWWlByTktrUm9ZTwphVXpDY3RmRGtV [...]
      key: default/mcp-tls-ca-cert:backend-tls:default/mcp-svc.default.svc.cluster.local
      name:
        kind: BackendTLSPolicy
        name: mcp-tls-ca-cert
        namespace: default
      target:
        service:
          hostname: mcp-svc.default.svc.cluster.local
          namespace: default
- resource:
    policy:
      backend:
        backendTls:
          hostname: mcp-app.foo
      key: default/mcp-tls-system-cert:backend-tls:default/mcp-svc.default.svc.cluster.local/80
      name:
        kind: BackendTLSPolicy
        name: mcp-tls-system-cert
        namespace: default
      target:
        service:
          hostname: mcp-svc.default.svc.cluster.local
          namespace: default
          port: 80
- hostname: mcp-svc.default.svc.cluster.local
  name: mcp-svc
  namespace: default
  ports:
  - servicePort: 80
status:
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayBackend
  metadata:
    name: ai-groups
    namespace: default
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: Backend successfully accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayBackend
  metadata:
    name: anthropic-single
    namespace: default
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: Backend successfully accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayBackend
  metadata:
    name: mcp-backend
    namespace: default
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: Backend successfully accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayBackend
  metadata:
    name: openai-single
    namespace: default
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: Backend successfully accepted
      reason: Accepted
      status: "True"
      type: Accepted
